foundations/landing-page/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Roboto, sans-serif;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 16px;
    background-color: #1f2937;
    align-items: center;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight: bold;
    margin-left: 200px;
}

.links ul {
    display: flex;
    list-style: none;
    gap: 32px;
    margin-right: 200px;
}

li a {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
}

.hero {
    background-color: #1f2937;
    padding: 90px 0 120px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 80px;
}

.hero-main {
    width: 480px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 15px;
    height: 250px;
}

.hero-title {
    font-size: 48px;
    font-weight: 900;
    color: #f9f8fa;
    width: 500px;
}

.hero-desc {
    font-size: 18px;
    color: #e5e7eb;
}

span {
    font-weight: 700;
    background-color: #6f2937;
    padding: 0 7px;
}

button {
    background-color: #3882f6;
    color: #fff;
    font-size: 18px;
    padding: 6px 30px;
    border-radius: 8px;
    border: 0;
    cursor: pointer;
}

.info {
    padding: 50px 0 120px;
}

.info-title {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    text-align: center;
    margin-bottom: 50px;
}

.info-container {
    display: flex;
    justify-content: center;
    gap: 50px;
    flex-wrap: wrap;
}

.info-box {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.info-img {
    border: 4px #3882f6 solid;
    border-radius: 20px;
    width: 175px;
    height: 175px;
    overflow: hidden;
}

img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.img-desc p {
    width: 175px;
    text-align: center;
    color: #1f2937;
}

.quote {
    padding: 120px 0 90px;
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
}

.quote-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: 1200px;
    gap: 30px;
}

.quote-main p {
    font-size: 36px;
    font-weight: 300;
}

.quote-author {
    align-self: flex-end;
    margin-right: 40px;
    font-size: 24px;
    font-weight: bold;
}

.sign-up {
    padding: 100px 0;
    display: flex;
    justify-content: center;
}

.sign-up-container {
    background-color: #3882f6;
    padding: 50px 40px;
    display: flex;
    justify-content: space-between;
    width: 1400px;
    border-radius: 8px;
    align-items: center;
}

.sign-up-container div {
    margin: 0 40px;
}

.sign-up-main {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.sign-up-title {
    color: #f9faf8;
    font-weight: 900;
    font-size: 24px;
}

.sign-up-desc {
    color: #e5e7eb;
    font-size: 18px;
}

.sign-up-button button {
    border: 2px solid white;
    border-radius: 8px;
}

footer {
    text-align: center;
    padding: 40px;
    background-color: #1f2937;
    color: #fff;
}

